# STC_test_task

./: README.md
AlgorithmLCG/: README.md  alg_LCG_v1.cpp  alg_LCG_vers2.cpp
DiffRangeMethod/: README.md  rdm.m
FrequnceSynth/: CMakeLists.txt  README.MD  algKarplus.cpp  autorun.sh  main.cpp
task_2_6_frenq_synt/: README.MD  algKarplus.hpp
